syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

service KeyGen {
    rpc Test (PopulateKeysRequest) returns (google.protobuf.Empty);
    rpc PopulateKeys (PopulateKeysRequest) returns (google.protobuf.Empty);
    rpc AllocateKeys (AllocateKeysRequest) returns (AllocateKeysResponse);
}

message PopulateKeysRequest {
    uint32 key_length = 1;
    string requester_email = 2;
}

message AllocateKeysRequest {
    uint32 max_key_count = 1;
}

message AllocateKeysResponse {
    repeated string keys = 1;
}